--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,22 +35,22 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "# Data\n",
-    "categories = ['A', 'B', 'C', 'D']\n",
-    "values = [5, 7, 3, 9]\n",
-    "colors = ['red', 'blue', 'green', 'purple']  \n",
+    "try:\n",
+    "    categories = ['A', 'B', 'C', 'D']\n",
+    "    values = [5, 7, 3, 9]\n",
+    "    colors = ['red', 'blue', 'green', 'purple']\n",
     "\n",
+    "    plt.bar(categories, values, color=colors)\n",
+    "    plt.title(\"Bar Plot of Categories\")\n",
+    "    plt.xlabel(\"Categories\")\n",
+    "    plt.ylabel(\"Values\")\n",
+    "    plt.show()\n",
     "\n",
-    "plt.bar(categories, values, color=colors)\n",
-    "\n",
-    "\n",
-    "plt.title(\"Bar Plot of Categories\")\n",
-    "plt.xlabel(\"Categories\")\n",
-    "plt.ylabel(\"Values\")\n",
-    "\n",
-    "\n",
-    "plt.show()\n"
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while plotting Bar Plot: {e}\")\n",
+    "\n"
    ]
   }
  ],
