--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -37,24 +37,24 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "x = [1, 2, 3, 4, 5]\n",
-    "y = [2, 4, 6, 8, 10]\n",
+    "try:\n",
+    "    x = [1, 2, 3, 4, 5]\n",
+    "    y = [2, 4, 6, 8, 10]\n",
     "\n",
+    "    plt.scatter(x, y, color='blue')\n",
     "\n",
-    "plt.scatter(x, y, color='blue')\n",
+    "    for i in range(len(x)):\n",
+    "        plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
     "\n",
+    "    plt.title('Scatter Plot with Annotations')\n",
+    "    plt.xlabel('x values')\n",
+    "    plt.ylabel('y values')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
     "\n",
-    "for i in range(len(x)):\n",
-    "    plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
-    "\n",
-    "\n",
-    "plt.title('Scatter Plot with Annotations')\n",
-    "plt.xlabel('x values')\n",
-    "plt.ylabel('y values')\n",
-    "plt.grid(True)\n",
-    "\n",
-    "\n",
-    "plt.show()\n"
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while plotting Scatter Plot: {e}\")\n",
+    "\n"
    ]
   }
  ],
