--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -37,18 +37,18 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
+    "try:\n",
+    "    data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
     "\n",
+    "    plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
+    "    plt.title('Histogram of Data')\n",
+    "    plt.xlabel('Value')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.show()\n",
     "\n",
-    "plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
-    "\n",
-    "\n",
-    "plt.title('Histogram of Data')\n",
-    "plt.xlabel('Value')\n",
-    "plt.ylabel('Frequency')\n",
-    "\n",
-    "\n",
-    "plt.show()\n"
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while plotting Histogram: {e}\")\n",
+    "\n"
    ]
   }
  ],
