--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,21 +27,20 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "try:\n",
+    "    x = np.arange(0, 11)\n",
+    "    y = x ** 2\n",
     "\n",
-    "x = np.arange(0, 11)          \n",
-    "y = x ** 2                    \n",
+    "    plt.plot(x, y, marker='o')\n",
+    "    plt.title(\"Line Plot of x vs x²\")\n",
+    "    plt.xlabel(\"x values\")\n",
+    "    plt.ylabel(\"y = x²\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
     "\n",
-    "\n",
-    "plt.plot(x, y, marker='o')\n",
-    "\n",
-    "\n",
-    "plt.title(\"Line Plot of x vs x²\")  \n",
-    "plt.xlabel(\"x values\")              \n",
-    "plt.ylabel(\"y = x²\")               \n",
-    "plt.grid(True)                      \n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while plotting Line Plot: {e}\")\n",
+    "\n"
    ]
   },
   {
