--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -37,17 +37,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
-    "sizes = [40, 25, 20, 15]\n",
+    "try:\n",
+    "    labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "    sizes = [40, 25, 20, 15]\n",
     "\n",
+    "    plt.pie(sizes, labels=labels, autopct='%1.1f%%', startangle=140)\n",
+    "    plt.title('Programming Language Popularity')\n",
+    "    plt.show()\n",
     "\n",
-    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', startangle=140)\n",
-    "\n",
-    "\n",
-    "plt.title('Programming Language Popularity')\n",
-    "\n",
-    "\n",
-    "plt.show()\n"
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while plotting Pie Chart: {e}\")\n",
+    "\n"
    ]
   }
  ],
